========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2015-12-09

  - Fixed installation snafu: forgot to add the beancount.prices and bean-price
    install to the setup.py file.


2015-12-07

  - Fixed a bug in the load cache, whereby the load cache would not update
    itself on an included file. In order to do this, first I made the loader
    always return the full correct set of unique filenames processed in a load
    call, and then I used this to check the latest modified time.

  - I also used this to fix a related bug in the bean-web watcher: If an
    included file was being modified, bean-web would not reload itself
    automatically. redstreet0 sent a pull request to highlight the problem
    (thanks!):
    https://bitbucket.org/blais/beancount/pull-requests/6/feature-include-files-refresh/diff


2015-12-03

  - Added ROOT(account, num) account manipulation function to the shell.


2015-12-02

  - Fixed issue #84: The sorting of entries from multiple files was incorrectly
    placed, due to recent changes merged from the booking branch.

  - Fixed a bug deleting the load cache (was using an invalid filename).


2015-11-29

  - Made the pickle load cache enabled by default. This means you can now remove
    the BEANCOUNT_LOAD_CACHE environment variable. The load cache will be
    written out automatically, but only if it takes more than the time threshold
    (1 sec) to load a Beancount file. If it takes less than this time, no cache
    is written. (This saves the creation of these pesky crumbs for files it
    doesn't matter for.) If you would like to always disable the load cache, set
    the environment variable BEANCOUNT_DISABLE_LOAD_CACHE. I don't recommend
    it--this works well and for large files makes loading much, much faster.


2015-11-28

  - Implemented a script used to fetch prices online and output them in